testdata/baselines/reference/submodule/conformance/importDeferInvalidDefault.errors.txt
b.ts(1,23): error TS2307: Cannot find module 'a' or its corresponding type declarations.
b.ts(3,1): error TS2304: Cannot find name 'foo'.


==== a.ts (0 errors) ====
    export default function foo() {
        console.log("foo from a");
    }
    
==== b.ts (2 errors) ====
    import defer foo from "a";
                          ~~~
!!! error TS2307: Cannot find module 'a' or its corresponding type declarations.
    
    foo();
    ~~~
!!! error TS2304: Cannot find name 'foo'.